gccida/g0/result_ready_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:872:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 1990, "result_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:872:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 1990, "result_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1077:58: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ix86_cpu == PROCESSOR_PENTIUMPRO && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                                         ^~~~~~~~~~~~
                                                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1117:58: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ix86_cpu == PROCESSOR_PENTIUMPRO && memory_operand( recog_data_0.operand[1], VOIDmode) 
                                                         ^~~~~~~~~~~~
                                                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1118:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ix86_cpu == PROCESSOR_PENTIUM && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1146:44: error: use of undeclared identifier 'recog_data_0'
|| !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1157:80: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ix86_cpu == PROCESSOR_PENTIUMPRO && !which_alternative && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                                                               ^~~~~~~~~~~~
                                                                               recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1176:44: error: use of undeclared identifier 'recog_data_0'
|| !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1190:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1584:79: error: use of undeclared identifier 'recog_data_0'
&& ( which_alternative == 2 || ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2])) 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1607:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1614:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1639:79: error: use of undeclared identifier 'recog_data_0'
&& ( which_alternative == 2 || ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2])) 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1666:74: error: use of undeclared identifier 'recog_data_0'
&& ( which_alternative || ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2])) 
                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1691:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1698:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1717:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1727:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/insn-attrtab.c:1752:21: error: use of undeclared identifier 'recog_data_0'
&& !incdec_operand( recog_data_0.operand[2]) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/result_ready_cost/src/obj/insn-attrtab.o] Error 1
